# VulkanLearning

./: Cargo.toml  shaders_build.rs
src/: CompileShaders.bat  application.rs  main.rs  rendering.rs
src/application/: exceptions.rs  mod.rs  window.rs
src/assets/shaders/: Example.frag  Example.vert
src/rendering/: config.rs  debug.rs  exceptions.rs  mod.rs  pipeline_builder.rs  rendering_pipeline.rs  rendering_queue.rs  rendering_queue_config.rs  shaders.rs  vulkan_tools.rs
src/rendering/pipeline_builder/: builder.rs  initial_builder.rs  mod.rs  swap_chain.rs
src/rendering/queue_builder/: adding_pipelines.rs  builder_extension.rs  command_buffer.rs  command_pool.rs  exceptions.rs  framebuffers.rs  initial_builder.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  render_pass.rs  swap_chain.rs  sync_objects.rs  validation_layer.rs
src/rendering/queue_builder/build_stages/: adding_pipelines.rs  command_buffer.rs  command_pool.rs  framebuffers.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  render_pass.rs  swap_chain.rs  sync_objects.rs
src/rendering/shaders/: mod.rs  shader.rs
src/rendering/vulkan_tools/: exceptions.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  swap_chain.rs  swapchain.rs  validation_layer.rs
