[package]
name = "VulkanLearning"
version = "0.1.0"
edition = "2021"
build = "shaders_build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
libloading = "0.8.3"

simple_logger = "4.3.3"
log = "0.4.21"

[dependencies.vulkanalia]
version = "0.23.0"
features = ["window", "libloading"]
